atualização no html e css

--- a/login/login.html
+++ b/login/login.html
@@ -20,11 +20,11 @@
                 <h1>Login</h1>
                 <div class="frm-input">
                     <label for="mail">E-mail:</label>
-                    <input type="email" name="mail" class="input" id="mail" placeholder="exemplo@exemplo.com">
+                    <input type="email" name="mail" class="input" id="mail" minlength="10" required placeholder="exemplo@exemplo.com">
                 </div>
                 <div class="frm-input">
                     <label for="senha">Senha:</label>
-                    <input type="password" name="senha" class="input id="senha" placeholder="************">
+                    <input type="password" name="senha" class="input id="senha" minlength="5" required placeholder="************">
                 </div>
                 <button type="submit" class="btn-padrao">Login</button>
             </form>
