--- a/login/login.html
+++ b/login/login.html
@@ -15,7 +15,6 @@
             </div>
         </section>
         <section id="frm-login">
-            <img src="src/img/computer-login-animate.svg" alt="img-login">
             <form method="post" id="formulario-login">
                 <h1>Login</h1>
                 <div class="frm-input">
@@ -26,7 +25,7 @@
                     <label for="senha">Senha:</label>
                     <input type="password" name="senha" class="input id="senha" minlength="5" required placeholder="************">
                 </div>
-                <button type="submit" class="btn-padrao">Login</button>
+                <div id="div-btn"><button type="submit" class="btn-padrao">Login</button></div>
             </form>
         </section>
     </main>
