--- a/login/login.html
+++ b/login/login.html
@@ -1,33 +1,42 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="src/style/login.css">
     <title>login</title>
+    <!-- font awesome icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- css stylesheet -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <main>
-        <section id="txt-login">
-            <div id="txt">
-                <h1>Bem Vindo!</h1>
-                <h2>Área do Cliente</h2>
+<div class="container" id="container">
+    <div class="form-container sign-in-container">
+        <form method="post">
+            <h1>Entrar</h1>
+            <span>use sua conta</span>
+            <div class="infield">
+                <input type="text" placeholder="E-mail" name="email"/>
+                <label></label>
             </div>
-        </section>
-        <section id="frm-login">
-            <form method="post" id="formulario-login">
-                <h1>Login</h1>
-                <div class="frm-input">
-                    <label for="mail">E-mail:</label>
-                    <input type="email" name="mail" class="input" id="mail" minlength="10" required placeholder="exemplo@exemplo.com">
-                </div>
-                <div class="frm-input">
-                    <label for="senha">Senha:</label>
-                    <input type="password" name="senha" class="input id="senha" minlength="5" required placeholder="************">
-                </div>
-                <div id="div-btn"><button type="submit" class="btn-padrao">Login</button></div>
-            </form>
-        </section>
-    </main>
+            <div class="infield">
+                <input type="password" name="password" placeholder="Senha" />
+                <label></label>
+            </div>
+            <a href="#" class="forgot">Forgot your password?</a>
+            <button>entrar</button>
+        </form>
+    </div>
+    <div class="overlay-container" id="overlayCon">
+        <div class="overlay">
+            <div class="overlay-panel overlay-right">
+                <h1>Bem-Vindo</h1>
+                <h1>de Volta!</h1>
+                <p>A solução completa para otimizar o controle e a operação do seu negócio.</p>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
