--- a/login/login.html
+++ b/login/login.html
@@ -11,32 +11,41 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="container" id="container">
-    <div class="form-container sign-in-container">
-        <form method="post">
-            <h1>Entrar</h1>
-            <span>use sua conta</span>
-            <div class="infield">
-                <input type="text" placeholder="E-mail" name="email"/>
-                <label></label>
-            </div>
-            <div class="infield">
-                <input type="password" name="password" placeholder="Senha" />
-                <label></label>
-            </div>
-            <a href="#" class="forgot">Forgot your password?</a>
-            <button>entrar</button>
-        </form>
-    </div>
-    <div class="overlay-container" id="overlayCon">
-        <div class="overlay">
-            <div class="overlay-panel overlay-right">
-                <h1>Bem-Vindo</h1>
-                <h1>de Volta!</h1>
-                <p>A solução completa para otimizar o controle e a operação do seu negócio.</p>
+    <!-- Container principal -->
+    <div class="container" id="container">
+
+        <div class="form-container">
+            <form method="post">
+
+                <h1>Entrar</h1>
+                <span>use sua conta</span>
+
+                <div class="infield">
+                    <input type="text" placeholder="E-mail" name="email"/>
+                    <label></label>
+                </div>
+
+                <div class="infield">
+                    <input type="password" name="password" placeholder="Senha" />
+                    <label></label>
+                </div>
+
+                <a href="#" class="forgot">Forgot your password?</a>
+                <button>entrar</button>
+
+            </form>
+        </div>
+
+        <div class="overlay-container" id="overlayCon">
+            <div class="overlay">
+                <div class="overlay-panel">
+                    <h1>Bem-Vindo</h1>
+                    <h1>de Volta!</h1>
+                    <p>A solução completa para otimizar o controle e a operação do seu negócio.</p>
+                </div>
             </div>
         </div>
+
     </div>
-</div>
 </body>
 </html>
