Modificado o tamanho e adicionado animação ao colocar o foco no forms

--- a/login/login.html
+++ b/login/login.html
@@ -13,7 +13,7 @@
 <body>
     <!-- Container principal -->
     <div class="container" id="container">
-
+        <!-- Formulario -->
         <div class="form-container">
             <form method="post">
 
@@ -37,6 +37,7 @@
         </div>
 
         <div class="overlay-container" id="overlayCon">
+            <!-- Overlay -->
             <div class="overlay">
                 <div class="overlay-panel">
                     <h1>Bem-Vindo</h1>
